--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,12 +1,9 @@
 <div class="container">
     <br>
     <div class="row">
-        <div class="col-sm" 
-            *ngFor = "let product of products; let productId = index "
-        >
-
-            <div >
-                <a [routerLink]="[ productId ]">
+        <div class="col-sm" *ngFor = "let product of products; let productId = index ">
+            <div>
+                <a [routerLink]="[ product._id ]">
                     <div class="card" >
                         <img src="{{product.caverimage}}" class="card-img-top" alt="...">
                         <div class="card-body">
